# Equicord-Launcher

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/xtask-prepare-release/src/: main.rs
installers/NSIS/: headers.nsh  installer.nsi
installers/NSIS/sections/: install.nsi  uninstall.nsi
src/: builder.rs  constants.rs  lib.rs  progress.rs  require.js  updater.rs
