[workspace]
members = ["crates/*"]

[package]
name = "equicord-launcher"
description = "An easy-to-use launcher for Equicord"
authors = ["Rie Takahashi <megumin@megu.dev>"]
version = "0.1.11"
license = "GPL-3.0"
homepage = "https://github.com/Johnnycyan/Equicord-Launcher"
repository = "https://github.com/Johnnycyan/Equicord-Launcher"
keywords = ["equicord", "discord", "modding", "electron", "injector"]
edition = "2021"

[dependencies]
clap = "4.5.27"
dirs = "6.0.0"
electron-hook = "0.2.1"
tinyjson = "2.5.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
ureq = "3.0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", default-features = false, features = [
	"combaseapi",
	"knownfolders",
	"shlobj",
	"winerror",
	"winuser",
	"wingdi",
	"libloaderapi",
	"windef",
] }

[target.'cfg(unix)'.dependencies]
dialog = "0.3.0"

[lib]
name = "equicord_launcher"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "equicord-stable"
path = "src/bin/stable.rs"

[[bin]]
name = "equicord-ptb"
path = "src/bin/ptb.rs"

[[bin]]
name = "equicord-canary"
path = "src/bin/canary.rs"

[build-dependencies]
winresource = { version = "0.1.19", default-features = false }
